...
          onPress={() => onFocusField("start")}
          style={[
            s.inputRow,
            disabilityMode && s.inputRowDisability,
            activeField === "start" && s.inputRowActive,
          ]}
          testID="routeStartRow"
        >
          <View style={s.inputWrapper}>
            {start ? (
              <Text
                testID="routeStartText"
                style={s.inputText}
...
          onPress={() => onFocusField("destination")}
          style={[
            s.inputRow,
            disabilityMode && s.inputRowDisability,
            activeField === "destination" && s.inputRowActive,
          ]}
          testID="routeDestRow"
        >
          <View style={s.inputWrapper}>
            {destination ? (
              <Text
                testID="routeDestText"
                style={s.inputText}
...
